@@ -53,7 +53,6 @@
                 <configuration>
                     <source>8</source>
                     <target>8</target>
-                    <compilerArgs>--enable-preview</compilerArgs>
                 </configuration>
             </plugin>
         </plugins>
